@@ -23,7 +23,7 @@
  <alias from="sharing" to="@@sharing"/>
  <alias from="view" to="(selected layout)"/>
  <action title="View" action_id="view" category="object" condition_expr=""
-    url_expr="string:${object_url}/file_view" visible="True"
+    url_expr="string:${object_url}/file_view" visible="False"
     i18n:attributes="title">
   <permission value="View"/>
  </action>
