@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<object name="File"
+   meta_type="Factory-based Type Information with dynamic views"
+   i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+   <action title="View" action_id="view" category="object" condition_expr=""
+      url_expr="string:${object_url}/file_view" visible="False"
+      i18n:attributes="title">
+    <permission value="View"/>
+   </action>
+</object>
