@@ -5,7 +5,8 @@ Changelog
 1.5.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Hide view action for file.
+  [Julian Infanger]
 
 
 1.5 (2012-10-16)
